# cookiecutter-cpp-conda

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  Vagrantfile  conda_env.yaml  condafile.yaml
{{cookiecutter.project_slug}}/cmake-modules/: README.rst
{{cookiecutter.project_slug}}/doc/: CMakeLists.txt
{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: README.rst
{{cookiecutter.project_slug}}/provision/conda/: build.yaml
{{cookiecutter.project_slug}}/provision/linux/: distro.sh  install_conda_all_users.sh  linux.sh  provision.sh
{{cookiecutter.project_slug}}/scripts/: alpine.sh  common.sh  install_conda_all_users.sh  linux.sh  provision.sh  provision_ubuntu.sh  ubuntu.sh
{{cookiecutter.project_slug}}/src/: CMakeLists.txt
{{cookiecutter.project_slug}}/test/: CMakeLists.txt  test_{{cookiecutter.project_slug}}.cpp
{{cookiecutter.repo_name}}/: CMakeLists.txt  LICENSE.md  Makefile  README.md
{{cookiecutter.repo_name}}/test/: CMakeLists.txt  test_{{cookiecutter.project_name}}.cpp
